--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
+    "prestorybook": "rnstl",
     "storybook": "storybook start -p 7007"
   },
   "dependencies": {
@@ -13,19 +14,29 @@
     "react-native": "0.51.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^3.3.4",
+    "@storybook/addon-knobs": "^3.3.4",
+    "@storybook/addon-links": "^3.3.4",
+    "@storybook/react-native": "^3.3.4",
     "babel-jest": "22.0.4",
     "babel-preset-react-native": "4.0.0",
     "eslint-config-rallycoding": "^3.2.0",
     "flow-bin": "0.63.1",
     "jest": "22.0.4",
-    "react-test-renderer": "16.0.0",
-    "@storybook/react-native": "^3.3.4",
-    "@storybook/addon-actions": "^3.3.4",
-    "@storybook/addon-links": "^3.3.4",
+    "prop-types": "^15.6.0",
     "react-dom": "16.0.0",
-    "prop-types": "^15.6.0"
+    "react-test-renderer": "16.0.0"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./src"
+      ],
+      "pattern": "**/*.stories.js",
+      "outputFile": "./storybook/storyLoader.js"
+    }
   }
 }
