--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "react-native": "0.51.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.3.4",
-    "@storybook/addon-knobs": "^3.3.4",
-    "@storybook/addon-links": "^3.3.4",
-    "@storybook/react-native": "^3.3.4",
+    "@storybook/addon-actions": "3.2.15",
+    "@storybook/addon-knobs": "3.2.15",
+    "@storybook/addon-links": "3.2.15",
+    "@storybook/react-native": "3.2.15",
     "babel-jest": "22.0.4",
     "babel-preset-react-native": "4.0.0",
     "eslint-config-rallycoding": "^3.2.0",
@@ -33,9 +33,7 @@
   },
   "config": {
     "react-native-storybook-loader": {
-      "searchDir": [
-        "./src"
-      ],
+      "searchDir": ["./src"],
       "pattern": "**/*.stories.js",
       "outputFile": "./storybook/storyLoader.js"
     }
