--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "react": "16.0.0",
-    "react-native": "0.51.0"
+    "react-native": "0.50.3"
   },
   "devDependencies": {
     "@storybook/addon-actions": "3.2.15",
@@ -25,7 +25,7 @@
     "jest": "22.0.4",
     "prop-types": "^15.6.0",
     "react-dom": "16.0.0",
-    "react-native-storybook-loader": "^1.7.0",
+    "react-native-storybook-loader": "1.6.0",
     "react-test-renderer": "16.0.0"
   },
   "jest": {
