--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "react-native-animated-ui",
   "description": "Animated UI components for react-native",
-  "version": "0.0.1",
-  "private": true,
+  "repository": "https://github.com/DaniyarJakupov/react-native-animated-ui",
+  "version": "0.0.0",
+  "main": "src/index.js",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "prestorybook": "rnstl",
-    "storybook": "storybook start -p 7007"
+    "storybook": "storybook start -p 7007",
+    "release": "np --yolo --no-yarn"
   },
   "dependencies": {
-    "ramda": "^0.25.0",
-    "react": "16.0.0",
-    "react-native": "0.50.3",
     "react-native-svg": "6.0.0",
-    "styled-components": "^2.4.0"
+    "ramda": "0.25.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "3.2.15",
@@ -27,18 +26,22 @@
     "flow-bin": "0.57.3",
     "jest": "22.0.4",
     "prop-types": "^15.6.0",
+    "react": "16.0.0",
     "react-dom": "16.0.0",
+    "react-native": "0.50.3",
     "react-native-storybook-loader": "1.6.0",
     "react-test-renderer": "16.0.0"
+  },
+  "peerDependencies": {
+    "react": ">=16.0.0",
+    "react-native": ">=0.50.0"
   },
   "jest": {
     "preset": "react-native"
   },
   "config": {
     "react-native-storybook-loader": {
-      "searchDir": [
-        "./src"
-      ],
+      "searchDir": ["./src"],
       "pattern": "**/*.stories.js",
       "outputFile": "./storybook/storyLoader.js"
     }
