--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "arrow-body-style": 0,
     "prefer-const": 0,
     "import/no-unresolved": 0,
-    "import/no-extraneous-dependencies": 0
+    "import/no-extraneous-dependencies": 0,
+    "react/sort-comp": 0
   }
 }
